优化超时兼容 + -  时间

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "api",
     "sign"
   ],
-  "require": {},
+  "require": {
+    "workerman/webman-framework": "*"
+  },
   "autoload": {
     "psr-4": {
       "Wengg\\WebmanApiSign\\": "src"
